fix: Bespoke height added to stop jumpy card text on load

--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -10,7 +10,7 @@
 
 .productCard img {
   width: 100%;
-  height: auto;
+  height: 301px;
 }
 
 .productPriceContainer {
